2007-03-06  Matthias Clasen  <mclasen@Redhat.com>

	* tests/Makefile.am: Apply a patch by Loïc Minier
	to fix building with -Wl,-z,defs.  (#149144)

2007-03-03  Thierry Randrianiriana  <randrianiriana@gmail.com>

	* po/mg.po: Added Malagasy translation.
	* configure.in: Added Malagasy 'mg' to ALL_LINGUAS

2007-03-01  Ihar Hrachyshka <iharh@gnome.org>
	* configure.in: Added be@latin to ALL_LINGUAS.

2007-02-17  Tor Lillqvist  <tml@novell.com>

	* glib/gdate.c (win32_strftime_helper): New Win32-only
	function. Use the wide character Win32 API to do the work of
	strftime(): GetThreadLocale(), GetLocaleInfoW(), GetDateFormatW()
	and GetTimeFormatW().
	(g_date_strftime): On Windows use win32_strftime_helper()
	instead of strftime() to avoid codepage issues with strftime().
	Unfortunately using wcsftime() would not help either. (#404832)

2007-02-16  Soren Sandmann <sandmann@redhat.com>

	* tests/sequence-test.c: For move, test moving between two
	sequences. Add test for swap.

	* glib/gsequence.c: Replace splay tree with a treap.
	(check_node): Add checks for the treap invariants.

2007-02-10  Hans Breuer  <hans@breuer.org>

	* glib/makefile.msc.in : added gsequence.obj

Fri Feb  9 17:46:18 2007  Søren Sandmann  <sandmann@redhat.com>

	* glib/gsequence.c (g_sequence_get_end_iter): Remove assertion.
	* glib/gsequence.c (is_end): Return TRUE if the iter doesn't have
	a parent.
	* glib/gsequence.c: Fix grammar of comment.
	* glib/gsequence.c (node_update_fields): Use a temporary variable
	for the n_nodes.

2007-02-07  Soren Sandmann <sandmann@daimi.au.dk>

	* tests/sequence-test.c (compare_items): Force an arbitrary order
	on otherwise identical items.

	* glib/gsequence.c: Add comment discussing splay trees vs. other trees.
	* glib/gsequence.c (is_end): Add fast path for the common case
	when the node is not actually the end node.

2007-02-05  Soren Sandmann <sandmann@daimi.au.dk>

	* glib/gsequence.c (g_sequence_sort_iter): Don't prohibit access