@@ -1,4 +1,14 @@
-2007-03-06  Matthias Clasen  <mclasen@Redhat.com>
+2007-03-06  Matthias Clasen  <mclasen@redhat.com>
+
+	Work with Solaris gettext (#341988, Laszlo Peter)
+
+	* m4macros/glib-gettext.m4: Make GLIB_WITH_NLS define
+	MSGFMT_OPTS if msgfmt supports -c.
+
+	* po/Makefile.in.in: Use MSGFMT_OPTS when calling
+	msgfmt.
+
+2007-03-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* tests/Makefile.am: Apply a patch by Loïc Minier
 	to fix building with -Wl,-z,defs.  (#149144)
